--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,12 @@
 
     </div>
 
-    <footer></footer>
+    <footer>
+        <div class="container">
+            &copy;Copyright 2016 Edenilton
+        </div>
+    </footer>
+    
     
 
 </body>
